Major refactoring (#7)
major refactoring, updates and simplifications